# yuimol

./: .gitignore  .mcp.json.example  CLAUDE.md  README.md  pyproject.toml
tests/: conftest.py
tests/fixtures/: .gitignore  download.py
tests/integration/: test_e2e.py
tests/unit/: test_alignment.py  test_commands.py  test_uniprot.py
tests/visual/: _llm_helper.py  active_site_enzyme.py  alphafold_vs_pdb.py  cancer_mutations_p53.py  color_residues_1tup.py  complex_interface.py  domains_af_p53.py  llm_cancer_mutations.py  llm_complex_interface.py  llm_domains_p53.py  llm_enzyme_chat.py  llm_kras_plddt.py  render_nice.py
yuimol/: __init__.py  agent.py  alignment.py  commands.py  constants.py  gui.py  mcp_server.py  plugin.py  tools.py  uniprot.py
